# cgcnn2

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  time_bench.py
.github/: dependabot.yml
.github/workflows/: build-docs.yml  build.yml  docs.yml  publish-pypi.yml  publish-release.yml  pypi-publish.yml
1_cgcnn/: index.html
1_installation/: index.html
2_cgcnn/: index.html
2_installation/: index.html
3_usage/: index.html
4_examples/: index.html
5_api_reference/: index.html
assets/: nacl.glb
cgcnn/: __init__.py  cgcnn_data.py  cgcnn_utils.py
cgcnn2/: __init__.py  cgcnn_data.py  cgcnn_ft.py  cgcnn_model.py  cgcnn_tr.py  cgcnn_utils.py  data.py  model.py  model_e3.py  util.py  utils.py
cgcnn2/asset/: atom_init.json
cgcnn2/cli/: cgcnn_ft.py  cgcnn_init.py  cgcnn_pr.py  cgcnn_tr.py  cgcnne3_tr.py
cgcnn2/models/: __init__.py
cgcnn2/pretrained_models/: README.md
changelog/: index.html
dev/: U2_N0_OV0_00_000.cif  cython_bench.py  cython_neighbor.py  python_neighobor.py
docs/: 1_cgcnn.md  1_installation.md  2_cgcnn.md  2_installation.md  3_usage.md  4_examples.md  5_api_reference.md  api.md  contributing.md  examples.md  index.md  installation.md  requirements.txt
examples/: p01_evaluation.ipynb  p01_predict.py  p01_property_prediction.ipynb  p02_cgcnn_descriptors.ipynb  p02_extract_features.ipynb  p02_structural_descriptor.ipynb  predict.py  s01_cgcnn_ft_slurm.sh  s01_slurm_train.sh  s02_cgcnn_pr_slurm.sh  s02_slurm_predict.sh  s03_slurm_fine_tuning.sh  s04_slurm_train_e3.sh  slurm_script.sh
examples/data/sample-classification/: atom_init.json
examples/jupyter_notebook/: extract_features.ipynb
examples/slurm_script/: cgcnn_ft_slurm.sh  stderr.31290353
search/: search_index.json
