[build-system]
build-backend = "uv_build"

requires = [ "uv-build>=0.7.10" ]

[project]
name = "cgcnn2"
version = "0.5.2"
description = "Reproduction of Crystal Graph Convolutional Neural Networks"
readme = "README.md"
keywords = [ "computational-materials", "fine-tuning", "graph-model", "python" ]
license = { text = "MIT" }
maintainers = [ { name = "Jiacheng Wang", email = "jiachengwang@umass.edu" } ]
authors = [ { name = "Jiacheng Wang", email = "jiachengwang@umass.edu" } ]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "pymatgen>=2025.1.9",
  "torch>=2.2",
]
urls.homepage = "https://github.com/jcwang-dev/cgcnn2/"
urls.repository = "https://github.com/jcwang-dev/cgcnn2/"
# pymatgen tracks the first release of the current year
# torch tracks the first release of the last year

scripts.atom-gen = "cgcnn2.cli.cgcnn_init:atom_gen"
scripts.cgcnn-ft = "cgcnn2.cli.cgcnn_ft:main"
scripts.cgcnn-pr = "cgcnn2.cli.cgcnn_pr:main"
scripts.cgcnn-tr = "cgcnn2.cli.cgcnn_tr:main"
scripts.id-gen = "cgcnn2.cli.cgcnn_init:id_gen"

[dependency-groups]
dev = [ "pre-commit>=4.3", "pytest>=8.3", "pytest-cov>=6", "ruff>=0.12.9", "ty>=0.0.1a18" ]

[tool.ruff]
target-version = "py311"

line-length = 88
indent-width = 4
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = false
lint.select = [ "E4", "E7", "E9", "F", "I" ]
lint.ignore = [  ]
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "cgcnn2" ]

[tool.pyproject-fmt]
column_width = 120
indent = 2
keep_full_version = false
max_supported_python = "3.13"

[tool.uv.build-backend]
module-name = "cgcnn2"
module-root = ""
source-exclude = [ "dev/**" ]
wheel-exclude = [ "dev/**" ]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
unresolved-import = "error"
unresolved-attribute = "error"
missing-argument = "error"
